changed resume skills

--- a/content/bkerley-resume.tex
+++ b/content/bkerley-resume.tex
@@ -200,7 +200,7 @@
 	
 	\resitem{{\bfseries Programming Languages:} C, CSS, JavaScript, \LaTeX, Ruby, SQL, XHTML}
 	
-	\resitem{{\bfseries Tools, Frameworks, and APIs:} Managed Direct3D, Git, Prototype, Ruby on Rails, Subversion}
+	\resitem{{\bfseries Tools, Frameworks, and APIs:} Git, Prototype, Ragel, Ruby on Rails, Subversion}
 
 \end{ressection}
 
