--- a/content/bkerley-resume.tex
+++ b/content/bkerley-resume.tex
@@ -120,7 +120,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%
 \begin{ressection}{Experience}
-	\begin{ressubsec}{Worldmedia}{Miami, FL}{Software Engineer: June, 2008--Present}
+	\begin{ressubsec}{Worldmedia}{Miami, FL}{Software Engineer: June, 2008--June, 2009}
 		\ressubitem{Maintenance and development of proprietary content management system in Rails.}
 		\ressubitem{Created AJAX-based user interfaces for world-facing marketing and sales websites.}
 		\ressubitem{Performed security reviews and hardening, including new authentication and access control systems.}
